kube-manifestfiles/ALB-with-EKS/ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: usermgmt-ingressclass-for-alb
  labels:
    app: usermgmt
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"

spec:
  controller: ingress.k8s.aws/alb
