kube-manifestfiles/ALB-with-EKS/external-dns.yml
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: external-dns
#  namespace: default
#  annotations:
#    eks.amazonaws.com/role-arn: arn:aws:iam::390402566276:role/ExternalDNS-Role
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns-ns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.18.0
          args:
            - --source=service
            - --source=ingress
           # - --domain-filter=devopspedia.online   # <--- your domain
            - --provider=aws
          #  - --policy=upsert-only
            - --aws-zone-type=public
            - --registry=txt
            - --txt-owner-id=external-dns
